Flat Button: fix for wrong color of ripple effect in dark theme
[Issue] https://github.com/Samsung/TAU/issues/1208
[Problem] The Ripple effect color is not consistent in Dark Mode
[Solution]
 - Background color for flat button with icon had deprecated color

--- a/src/css/profile/mobile/common/button.less
+++ b/src/css/profile/mobile/common/button.less
@@ -419,7 +419,6 @@ a.ui-btn {
 				width: 56 * @px_base;
 				border-radius: 28 * @px_base;
 				background-color: var(--button-background-flat);
-				opacity: 1;
 			}
 			&-top {
 				line-height: normal;
